# docker-vscodeWithGtest

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: func.h
lib/: CMakeLists.txt  func.cpp
test/: CMakeLists.txt  test000.cpp
